--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,13 @@
   "manifest_version": 2,
   "description": "Are the toilet available?",
   "browser_action": {
-    "default_icon": "img/toilets_1.png",
-    "default_popup": "toilet.html"
+    "default_icon": "img/toilets_1.png"
   },
   "permissions": [
     "http://lights.theodo.fr/",
     "https://lights.theodo.fr/"
-  ]
+  ],
+  "background": {
+      "scripts": ["model.js", "background.js"]
+  }
 }
