--- a/toilet/manifest.json
+++ b/toilet/manifest.json
@@ -4,7 +4,8 @@
   "manifest_version": 2,
   "description": "Are the toilet available?",
   "browser_action": {
-    "default_icon": "img/toilets_1.png"
+    "default_icon": "img/toilets_1.png",
+    "default_popup": "popup.html"
   },
   "permissions": [
     "http://lights.theodo.fr/",
