--- a/toilet/manifest.json
+++ b/toilet/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Theodo toilet",
   "version": "1.0",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "description": "Are the toilet available?",
   "browser_action": {
     "default_icon": "img/toilets_1.png",
@@ -13,5 +13,6 @@
   ],
   "background": {
       "scripts": ["model.js", "background.js"]
-  }
+  },
+  "update_url": "https://raw.github.com/benja-M-1/toilet-chrome-extension/master/updates.xml"
 }
