--- a/toilet/manifest.json
+++ b/toilet/manifest.json
@@ -2,7 +2,7 @@
   "name": "Theodo toilet",
   "version": "1.0",
   "manifest_version": 3,
-  "description": "Are the toilet available?",
+  "description": "Are the toilets free?",
   "browser_action": {
     "default_icon": "img/toilets_1.png",
     "default_popup": "popup.html"
